feat[user]: modify database scheme
