# src/dtos/user.dto.ts
@@ -1,77 +1,78 @@
-import { GenderEnum, RoleEnum } from "../common/role";
-import { GeneralFileDto } from "./index.dto";
+import { GenderEnum, RoleEnum } from '../common/role'
+import { GeneralFileDto } from './index.dto'
 
 export interface CreateUserDto {
-    firstName: string;
-    lastName: string;
-    userName: string;
-    contactNumber: string;
-    gender: GenderEnum;
-    dateOfBirth: string;
+	firstName: string
+	lastName: string
+	userName: string
+	contactNumber: string
+	gender: GenderEnum
+	dateOfBirth: string
 }
 
 export interface GetUserDto {
-    userId: string;
-    firstName: string;
-    lastName: string;
-    userName: string;
-    contactNumber: string;
-    gender: string;
-    role: RoleEnum;
-    dateOfBirth: string;
-    createdBy: string;
-    createdDateTime: string;
-    updatedBy: string;
-    updatedDateTime: string;
+	userId: number
+	userGuid: string
+	firstName: string
+	lastName: string
+	userName: string
+	contactNumber: string
+	gender: string
+	role: RoleEnum
+	dateOfBirth: string
+	createdBy: string
+	createdDateTime: string
+	updatedBy: string
+	updatedDateTime: string
 }
 
 export interface CreateResidentDto extends CreateUserDto {
-    unitNumber: string;
-    floorNumber: string;
-    supportedFiles: GeneralFileDto[]
+	unitNumber: string
+	floorNumber: string
+	supportedFiles: GeneralFileDto[]
 }
 
 export interface CreateSystemAdminDto extends CreateUserDto {
-    staffId: string;
-    supportedFiles: GeneralFileDto[]
+	staffId: string
+	supportedFiles: GeneralFileDto[]
 }
 
 export interface GetUserDetailsByIdDto {
-    userId: string;
-    firstName: string;
-    lastName: string;
-    userName: string;
-    email: string;
-    contactNumber: string;
-    gender: string;
-    role: RoleEnum;
-    roleInformation?: ResidentInformationDto | SystemInformationDto;
-    dateOfBirth: string;
-    isActive?: boolean;
-    createdBy: string;
-    createdDateTime: string;
-    updatedBy: string;
-    updatedDateTime: string;
+	userId: number
+	userGuid: string
+	firstName: string
+	lastName: string
+	userName: string
+	email: string
+	contactNumber: string
+	gender: string
+	role: RoleEnum
+	roleInformation?: ResidentInformationDto | SystemInformationDto
+	dateOfBirth: string
+	isActive?: boolean
+	createdBy: string
+	createdDateTime: string
+	updatedBy: string
+	updatedDateTime: string
 }
 
 export interface ResidentInformationDto {
-    floorNumber: string
+	floorNumber: string
 	unitNumber: string
 	supportedFiles: string[]
 }
 
 export interface SystemInformationDto {
-    staffId: string
+	staffId: string
 	supportedFiles: string[]
 }
 
 export interface EditUserDetailsByIdDto {
-    userId: string;
-    firstName: string;
-    lastName: string;
-    userName: string;
-    email: string;
-    contactNumber: string;
-    gender: string;
-    dateOfBirth: string;
+	firstName: string
+	lastName: string
+	userName: string
+	email: string
+	contactNumber: string
+	gender: string
+	dateOfBirth: string
 }
